--- a/Template/public/css/style.css
+++ b/Template/public/css/style.css
@@ -181,6 +181,56 @@ ol {
     background-color: #0067ab46;
 }
 
+.address {
+    width: 500px;
+    margin-right : 50px;
+    height: 200px;
+    padding: 20px;
+}
+
+.address-block {
+    background: #0066CC;
+    border: 1px solid rgba(223, 61, 61, 0.623);
+    border-radius: #0066CC;
+    position: relative;
+    overflow: hidden;
+    left: 1165px;
+    bottom: 800px;
+    padding: 30px;
+    transition: all 0.3s ease;
+}
+
+.address-block-full {
+    background-color: var(--section-bg-color);
+    border-color: transparent;
+    border-radius: 20px;
+}
+
+.address-block-full {
+    background-color: var(--section-bg-color);
+    border-color: transparent;
+}
+  
+.address-block-full:hover {
+    border-color: rgb(40, 140, 197);
+}
+  
+.address-block-full .address-block-info {
+    padding: 20px;
+    padding-bottom: 0;
+}
+  
+.address-block-full .address-block-image {
+    width: 1920px;
+    height: 500px;
+}
+
+.address-block-info {
+    display: block;
+    padding: 10px 20px;
+    padding-bottom: 0;
+}
+
 /*! jQuery UI - v1.12.1 - 2016-09-14
 * http://jqueryui.com
 * Includes: core.css, accordion.css, autocomplete.css, menu.css, button.css, controlgroup.css, checkboxradio.css, datepicker.css, dialog.css, draggable.css, resizable.css, progressbar.css, selectable.css, selectmenu.css, slider.css, sortable.css, spinner.css, tabs.css, tooltip.css, theme.css
