--- a/myProject/public/css/style.css
+++ b/myProject/public/css/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 50px;
 }
 
 :root {
@@ -245,6 +246,23 @@ ol {
     padding: 20px;
 }
 
+.cardcard {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    height: 600px;
+    margin-top: 50px;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem
+}
+
+
 .cardt {
     height: 60px;
     overflow: hidden;
@@ -321,8 +339,8 @@ ol {
     display: inline-block;
     position: relative;
     z-index: 2;
-    margin-top: 10px;
-    margin-bottom: 8px;
+    margin-top: 30px;
+    /* margin-bottom: 8px; */
     padding: 10px 25px;
   }
 
