--- a/myProject/public/css/style.css
+++ b/myProject/public/css/style.css
@@ -246,6 +246,38 @@ ol {
     padding: 20px;
 }
 
+.cardcardcard {
+    filter: blur(1px);
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    height: 600px;
+    margin-top: 50px;
+    word-wrap: break-word;
+    /* background-image: url('/images/logo.png'); */
+    background-color: #ffffff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem
+}
+
+.ima {
+    content: "";
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    /* background: url("/static/images/application/ic-checkbox.png?9106b4565ed2") no-repeat 0 0; */
+    /* background-position: 0 -20px; */
+    background-size: 200px;
+    position: relative;
+    bottom: 50%;
+    left: 20%;
+    background-image: url('/images/terminate.png') ;
+}
+
 .cardcard {
     position: relative;
     display: -ms-flexbox;
@@ -279,7 +311,7 @@ ol {
     border-radius: 100px;
     color: #ffffff;
     padding: 5px;
-    width: 70px;
+    width: 90px;
     text-align: center;
     font-size: 15px;
   }
