--- a/myProject/public/css/style.css
+++ b/myProject/public/css/style.css
@@ -339,7 +339,7 @@ ol {
   }
 
   .SttausF {
-    background-color: #00ff62;
+    background-color: #00a40e;
     font-family: 'Sono', sans-serif;
     border-radius: 100px;
     color: #ffffff;
