--- a/myProject/public/css/style.css
+++ b/myProject/public/css/style.css
@@ -305,7 +305,7 @@ ol {
 }
 
 .SttausF {
-    background-color: #00ff62;
+    background-color: #00b009;
     font-family: "Sono", sans-serif;
     border-radius: 100px;
     color: #ffffff;
